--- a/toolkit/set/config.json
+++ b/toolkit/set/config.json
@@ -1,6 +1,6 @@
 {
   "owner": [
-    "628xxxxxxxxxx@s.whatsapp.net"
+    "628388076663@s.whatsapp.net"
   ],
   "botname": "(Experimental) -▪︎ Bella-AI",
   "botfullname": "Bella Clarissa",
