--- a/toolkit/set/config.json
+++ b/toolkit/set/config.json
@@ -2,9 +2,9 @@
   "owner": [
     "628388076663@s.whatsapp.net"
   ],
-  "botname": "(Experimental) -▪︎ Bella-AI",
-  "botfullname": "Bella Clarissa",
-  "botnickname": "Bella",
+  "botname": "(Experimental) -▪︎ Runaa-AI",
+  "botfullname": "Runaa Chan",
+  "botnickname": "Runa",
   "ownername": "runaa",
   "cfg": {
     "public": false,
